--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.0",
-    "chai": "^4.3.6",
     "mocha": "^9.2.1",
     "sinon": "^13.0.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6"
   }
 }
